--- a/멤버수정.html
+++ b/멤버수정.html
@@ -183,7 +183,7 @@
             <label for="floatingInput">사진</label>
         </div>
         <div class="mybtn">
-            <button type="button" class="updatebtn" id="updatebtn">수정</button>
+            <button type="button" class="updatebtn" id="updatebtn">수정></button>
             <button type="button" class="close" id="homebtn">홈으로</button>
 
         </div>
