--- a/멤버수정.html
+++ b/멤버수정.html
@@ -185,6 +185,7 @@
         <div class="mybtn">
             <button type="button" class="updatebtn" id="updatebtn">수정></button>
             <button type="button" class="close" id="homebtn">홈으로</button>
+            <button type="button" class="close" >test</button>
 
         </div>
     </div>
