--- a/멤버수정.html
+++ b/멤버수정.html
@@ -7,7 +7,7 @@
     <title>멤버 수정</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -89,7 +89,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
         import { getFirestore, doc, updateDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-      
+
         const firebaseConfig = {
             apiKey: "AIzaSyA0FeKqEznYKRWyX6nx8b0akpNF0qQfOMk",
             authDomain: "sparta-dd33c.firebaseapp.com",
@@ -103,7 +103,6 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        
         // 로컬스토리지에서 기존 값 가져오기
         const savedData = JSON.parse(localStorage.getItem("editMember"));
         if (savedData) {
@@ -135,13 +134,12 @@
                 await updateDoc(ref, updatedData);
                 alert("수정이 완료되었습니다!");
                 localStorage.removeItem("editMember");
-                window.location.href = "mypage.html";     
+                window.location.href = "mypage.html";
         });
 
         $("#homebtn").click(async function () {
                 window.location.href = 'main.html'; // main.html로 이동
             });
-
     </script>
 </head>
 
@@ -183,8 +181,9 @@
             <label for="floatingInput">사진</label>
         </div>
         <div class="mybtn">
-            <button type="button" class="updatebtn" id="updatebtn">수정></button>
+            <button type="button" class="updatebtn" id="updatebtn">수정</button>
             <button type="button" class="close" id="homebtn">홈으로</button>
+
         </div>
     </div>
 </body>
